# LightClaw

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  项目简历描述.md
backend/: README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  routes_applications.py  routes_datapool.py  routes_eval.py  routes_gui.py  routes_health.py  routes_llm_settings.py  routes_memory.py  routes_notes.py  routes_tasks.py  routes_todos.py
backend/app/browser/: __init__.py  actions.py  page_parser.py  playwright_manager.py
backend/app/core/: __init__.py  config.py  enums.py  logger.py
backend/app/datapool/: __init__.py  builder.py  exporter.py  filters.py  splitter.py
backend/app/db/: __init__.py  init_db.py  models.py  session.py
backend/app/eval/: __init__.py  deterministic.py  metrics.py  reports.py  reward.py  runner.py
backend/app/gateway/: __init__.py  collector.py  event_schema.py  persistence.py
backend/app/gui_grounding/: __init__.py  baseline.py  metrics.py
backend/app/llm/: __init__.py  base.py  openai_compatible.py  prompts.py
backend/data/: llm_profiles.json
backend/native/: notes_cli.py  reminders_cli.swift
backend/tests/: test_agent_schema.py  test_browser_runtime_executor.py  test_eval_report.py  test_export.py  test_gui_grounding.py  test_job_application_scenario.py  test_recruiting_extraction.py  test_reproducibility_scripts.py  test_reward.py  test_search_web.py  test_self_correction.py  test_skill_selector.py  test_spa_training.py  test_tool_skills.py  test_training_data_quality.py  test_training_pipeline.py
(+159 files in other folders)
